--- a/index.html
+++ b/index.html
@@ -52,6 +52,26 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse voluptas, inventore deleniti magnam mollitia repellendus blanditiis nisi delectus est nam reiciendis incidunt qui voluptate ducimus voluptatum sunt minus asperiores quisquam!</p>
 
         </article>
+        <div class="separador-conteudo"></div>
+
+        <div class="contact-container">
+            <form action="" class="contact-left">
+                <div class="contact-left-title">
+                    <h2>Faça Sua denúncia</h2>
+                    <hr>
+                </div>
+                <input type="text" name="nome" placeholder="Seu Nome" class="contact-input">
+                <input type="email" name="email" placeholder="E-mail" class="contact-input">
+                <input type="text" name="endereco" placeholder="Local" class="contact-input">
+                <input type="text" name="anexo" placeholder="Anexe a imagem" class="contact-input">
+                <textarea name="message" placeholder="Breve descrição" class="contact-input"></textarea>
+                <button type="submit">Enviar <img src="assets/arrow_icon.png" alt=""></button>
+            </form>
+            <div class="contact-right">
+                <img src="img/planeta-verde.png" alt="">
+            </div>
+
+        </div>
 
     </main>
     <div class="separador-conteudo"></div>
